# ffmpeg_samples

./: CMakeLists.txt  READMD.MD  main.c  main_hw_de.c  main_hw_en.c
src/: decode_video.c  encode_video.c  hw_decode.c  hw_encode.c  scale_video.c  vaapi_encode.c  vaapi_transcode.c
